--- a/lab2/build.gradle
+++ b/lab2/build.gradle
@@ -1,7 +1,14 @@
+buildscript {
+    dependencies {
+        classpath 'com.github.jacobono:gradle-jaxb-plugin:1.3.6'
+    }
+}
+
 plugins {
     id 'application'
-    id 'com.intershop.gradle.jaxb' version '4.4.1'
 }
+
+apply plugin: 'com.github.jacobono.jaxb'
 
 group 'distributed_systems_nsu'
 version '1.0-SNAPSHOT'
@@ -12,7 +19,7 @@ repositories {
 }
 
 configurations {
-    jaxbext
+    jaxb
 }
 
 application {
@@ -36,8 +43,7 @@ dependencies {
     jaxb 'com.sun.xml.bind:jaxb-core:2.2.11'
     jaxb 'com.sun.xml.bind:jaxb-xjc:2.2.11'
     jaxb 'com.sun.xml.bind:jaxb-impl:2.2.11'
-    jaxb 'javax.xml.bind:jaxb-api:2.2.11'
-    jaxbext 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
+    jaxb 'javax.xml.bind:jaxb-api:2.2.12-b141001.1542'
 
     compileOnly 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
@@ -48,12 +54,21 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
 }
 
-jaxb {
-    javaGen {
-        name {
-            packageName = 'ru.nsu.fit.saraeva.lab2.generated'
-            outputDir = file('./src/main/java')
-            schema = file('./src/main/resources/OSMSchema.xsd')
-        }
+task generateJavaClasses {
+    System.setProperty('javax.xml.accessExternalSchema', 'all')
+    def jaxbTargetDir = file("src/main/java/")
+    doLast {
+        jaxbTargetDir.mkdirs()
+        ant.taskdef(
+                name: 'xjc',
+                classname: 'com.sun.tools.xjc.XJCTask',
+                classpath: configurations.jaxb.asPath
+        )
+        ant.jaxbTargetDir = jaxbTargetDir
+        ant.xjc(
+                destdir: '${jaxbTargetDir}',
+                package: 'ru.nsu.fit.saraeva.lab2.generated',
+                schema: 'src/main/resources/OSMSchema.xsd'
+        )
     }
 }
